--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,20 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--- index.html -->
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body style="background-color:slategrey">    
+  <div class="container">
+    <br>
+    <br>
+    <div class="navbar navbar-primary">
+        <ul class="navbar-brand">
+            <li>Home</li>
+        </ul>
+    </div>
+
   <app-root></app-root>
+  </div>
 </body>
 </html>
